src/objects/Inactive_Pitch_Idea__c.object
<CustomObject>
    <fields>
        <fullName>Revenue_Stream__c</fullName>
        <label>Revenue Stream</label>
        <picklist>
            <picklistValues>
                <fullName>Display ROP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wraps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertorials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glossies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reader offers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CGPs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bespoke features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand to hand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branded publishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reader shopper nights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office brand to hand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorships</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Schedule_Count__c</fullName>
        <label>Schedule Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule_Identifier__c</fullName>
        <label>Schedule Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Name__c</fullName>
        <label>Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceDate__c</fullName>
        <label>First Insertion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Section_Name__c</fullName>
        <label>Sub Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Section__c</fullName>
        <label>Sub Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Title_Category_Name__c</fullName>
        <label>Title Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Category__c</fullName>
        <label>Title Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Name__c</fullName>
        <label>Title Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <picklist>
            <controllingField>Package__c</controllingField>
            <picklistValues>
                <fullName>Daily Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Mail On Sunday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>TotalPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Classified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URN__c</fullName>
        <label>URN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>UnitPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upweight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate whether this product is an upweight on an existing product</description>
        <inlineHelpText>is this an upweight?</inlineHelpText>
        <label>Upweight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_CCI_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use CCI Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WebSite_Name__c</fullName>
        <label>WebSite Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebSite__c</fullName>
        <label>WebSite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Category_Name__c</fullName>
        <label>Website Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Category__c</fullName>
        <label>Website Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wowcher_Cost_Per_Week__c</fullName>
        <description>Wowcher Display only field</description>
        <label>Cost Per Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wowcher_Discount__c</fullName>
        <description>Discount for Wowcher Display only pitches</description>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wowcher_Duration__c</fullName>
        <description>Duration of the product for Wowcher only</description>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wowcher_Total_Cost__c</fullName>
        <description>Wowcher Display only</description>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yield__c</fullName>
        <label>Yield PCCM</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_Name__c</fullName>
        <label>Zone Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Inactive Product</label>
    <nameField>
        <displayFormat>PI-{000000}</displayFormat>
        <label>Inactive Pitch Idea Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inactive Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ReasonForInactive</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Active__c = FALSE, ISPICKVAL(Reason_for_Inactive2__c,&quot;&quot;))
&amp;&amp; !( $Setup.No_Validations__c.Flag__c )</errorConditionFormula>
        <errorDisplayField>Reason_for_Inactive2__c</errorDisplayField>
        <errorMessage>Please enter a reason for making this Pitch Idea Inactive.</errorMessage>
    </validationRules>
</CustomObject>